Fixed white space at bottom of episodes page

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -259,15 +259,7 @@ landing main {
 
 .episode {
         /*border-image: url('../images/cloud.png') 2 stretch;*/
-  background-color: rgb(215, 223, 231);
-  border-color: rgb(185, 195, 206);
-  border-style: solid;
-  border-width: 1px;
-  float: left;
-  margin: 0 1em;
-  padding: 0 20px;
-  width: 22em;
-  max-width: 100vw;
+  display: inline-block;
 }
 
 
@@ -488,6 +480,9 @@ hr{
 footer {
   border-top: 1px solid #73717b;
   min-height: 90px;
+}
+.episodes-footer{
+  margin: 0;
 }
 .left-links, .right-links{
   display: inline-block;
